fix some jump

--- a/src/components/App/Comment/CommentCard/styles.less
+++ b/src/components/App/Comment/CommentCard/styles.less
@@ -7,7 +7,7 @@
     margin: 0 20px;
 
     & .close {
-        padding: 0 30px;
+        padding: 0 15px;
         text-align: right;
         color: #DBDBDB;
         height: 40px;
